# envy

./: .env  Cargo.toml  README.md  go.mod
.github/workflows/: ci.yml  release.yml
src/: cli.rs  envfile.rs  lib.rs  loader.rs  main.rs
src/commands/: root.rs
