[package]
name = "envy"
description = "The environment manager you'll envy."
authors = ["Konstantin Zhigaylo <zero@kosyazero.com>"]
keywords = ["cli", "environment", "env"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/kostya-zero/envy"
repository = "https://github.com/kostya-zero/envy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
indexmap = { version = "2.12.1", features = ["std"] }
thiserror = "2.0.17"
